Fixed bug with word wrapping for long lines of text in content. Fixed fatal bug in implementation of source code highlighting for TinyMCE4.

--- a/public/css/content_styles.css
+++ b/public/css/content_styles.css
@@ -8,3 +8,4 @@
 .text_content li { margin: 0.3em 0; }
 .text_content ul { margin-left: 4em; }
 .text_content ol { margin-left: 4em; }
+.text_content { word-wrap: break-word; word-break: break-all; }
